--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@ducanh2912/next-pwa": "^10.2.7",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
+    "react-icons": "^5.2.1",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/node": "^20",
