--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
         "./src/*"
       ],
       "@components/*": [
-        "./src/app/components"
+        "./src/app/components/*"
       ]
     }
   },
