--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
     "@prisma/client": "^5.14.0",
+    "framer-motion": "^11.2.4",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
