--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
+    "resend": "^3.3.0",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
