--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
     "@prisma/client": "^5.14.0",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.2.4",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -22,6 +23,7 @@
     "sonner": "^1.4.41"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.12.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
